--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <footer class="footer">
     <div class="container">
     ::before
     <p class="text-muted">Eleanor Lowry</p>
     ::after
     </div>
+    </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
