--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <title>Eleanor Lowry</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://github.com/eclowry/eclowry.github.io/blob/master/sticky-footer.css" rel="stylesheet">
   </head>
   <body>
     <h1>Hello, world!</h1>
     <footer class="footer">
-    <div class="container">
-    ::before
-    <p class="text-muted">Eleanor Lowry</p>
-    ::after
-    </div>
+        <div class="container">
+        ::before
+        <p class="text-muted">Eleanor Lowry</p>
+        ::after
+        </div>
     </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
