--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Eleanor Lowry</title>
 
     <!-- Bootstrap -->
-    <link href="https://github.com/eclowry/eclowry.github.io/blob/master/sticky-footer.css" rel="stylesheet">
+    <link href="https://eclowry.github.io/sticky-footer.css" rel="stylesheet">
   </head>
   <body>
     <h1>Hello, world!</h1>
