--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <h1>Hello, world!</h1>
     <footer class="footer">
         <div class="container">
+        ::before
         <p class="text-muted">Eleanor Lowry</p>
+        ::after
         </div>
     </footer>
 
