--- a/index.html
+++ b/index.html
@@ -15,6 +15,72 @@
         <div class="container">
         <p class="text-muted">Eleanor Lowry</p>
         </div>
+    <div class="address">
+        <p>8 Usher Road #2 
+            Medford, MA 02155
+            lowry.ec@gmail.com                                                 978.689.5551</p>
+    </div>
+
+<div class="qualifications">
+
+<h2> SUMMARY OF QUALIFICATIONS </h2>
+    <h4>Core Competencies</h4>
+    <ul> 
+        <li>•   Core product management skills:  interdepartmental communication, customer service, rapid prototyping, market analysis, road mapping, and feature specs.</li>
+        <li>•   Computer skills, including: Keynote, Balsamiq, InVision, Adobe Photoshop, Illustrator, and Microsoft Office.</li> 
+        <li>•   Experience in prioritization of tasks to meet scheduled deadlines.</li>
+        <li>•   Able to learn and utilize new procedures and applications quickly and effectively.</li>
+        <li>•   Excellent written and verbal communications skills.</li>
+        <li>•   HTML and CSS </li>
+    </ul>
+<div class="experience">
+<h2>Relevant Experience </h2>
+    <ul>
+        <li>•   Product Management student at General Assembly: planned from conception to ready-to-build a consumer product, including business analysis, customer interviews, wire framing, storyboarding, and a final presentation. Coursework included fundamentals of user research, communicating with stakeholders, creating product features, specs, and MVPs, and creating and making a presentation to stakeholders.</li>
+        <li>•   As Wrap-Up Coordinator, learned complex, detail oriented procedures and industry-specific software in a fast-paced perfection-required office. Requires immediate responsiveness in a dynamic environment to serve customer needs and assisting other departments. Responsible for writing and editing procedures for department manual, as well as self-directed project seeking out and transitioning eligible clients from paper to electronic payroll.</li>
+        <li>•   At Kaon Interactive, was responsible for communication with subcontractors, assuring incoming projects were to spec, incoming inspection of products, and provided oral and written reports of any major roadblocks to the lead technical animator. Learned to use both Adobe Photoshop and the company's proprietary animation software to provide crucial assistance in keeping a critical project on time and on budget. </li>
+    </ul> 
+</div>
+
+PROFESSIONAL EXPERIENCE
+    Payright Payroll, Acton, MA                     2013-Present
+Wrap-Up Coordinator
+Responsible for printing, packaging and shipping of outgoing payrolls, including information-sensitive reports and live checks. Requires extreme attention to detail and following directions with absolute precision. High volume and fast paced, coordinators also assist clients picking up payrolls, answer phones, and troubleshoot problems with incoming payrolls with account representatives. 
+
+Jo-Ann Fabric and Craft, Westford, MA                   2012-2013
+    Team Member
+Assisted customers in finding products, consulted to help customers find the correct product(s). Worked with cash register and other in-store systems. Assisted with annual inventory.
+
+BBN Technologies, Cambridge, MA                 2008
+    English Annotator
+Generated verification and truthed datasets for a state of the art natural language computer application (searching context, not keyword). The interface used Microsoft Excel as a front-end and required highly accurate understanding and diagramming of English sentences and strong attention to detail. Contract was completed ahead of schedule.
+
+    Rochester Institute of Technology Middle College            2008    
+    Student coordinator     
+Assisted teachers and professors as guides and supervisors for middle and high school aged students participating in a weekend educational outreach program aimed at encouraging low-income students to seek a college education.
+
+    Kaon Interactive, Maynard, MA                       2006-2007   
+    Technical Animation Intern
+Performed quality assurance, completed basic animation and created marketing presentations for HD quality 3D models of consumer appliances and other products. Utilized Adobe Photoshop to improve image quality of model skins for use in HD, saving the company the cost of an additional photo shoot. Learned to use proprietary company animation software and digital animation to help complete a critical contract.
+
+EDUCATION
+General Assembly, Boston, MA                        2014
+Certificate of Completion, Product Management
+
+Fitchburg State University, Fitchburg, MA               2011 Graduate 
+    Bachelor of Science, Biology
+    
+    Rochester Institute of Technology, Rochester, NY            2007-2009
+    Completed 51 credits in Biological Sciences
+
+ACTIVITIES
+In-Classroom Volunteer, Nashua River Watershed Association  Late 2011
+Volunteer with the Nashua River Watershed Association doing in-classroom outreach in local grade schools.
+            
+    President, Sciences and Humanities Residential Life Program 2005
+    College of Wooster, Wooster, Ohio
+Duties included organization of membership, election oversight of officers, coordination of campus-wide activities and lectures to build bridges between the sciences and humanities.  Successfully grew the organization and established its relevance so that the college granted program residential use of off-campus housing.
+
     </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
