moved out of footer

--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
     <link href="https://eclowry.github.io/sticky-footer.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <footer class="footer">
-        <div class="container">
-        <p class="text-muted">Eleanor Lowry</p>
-        </div>
+    <h1>Eleanor Lowry</h1>
+    
     <div class="address">
         <p>8 Usher Road #2 
             Medford, MA 02155
@@ -80,7 +77,10 @@ Volunteer with the Nashua River Watershed Association doing in-classroom outreac
     President, Sciences and Humanities Residential Life Program 2005
     College of Wooster, Wooster, Ohio
 Duties included organization of membership, election oversight of officers, coordination of campus-wide activities and lectures to build bridges between the sciences and humanities.  Successfully grew the organization and established its relevance so that the college granted program residential use of off-campus housing.
-
+<footer class="footer">
+        <div class="container">
+        <p class="text-muted">Eleanor Lowry</p>
+        </div>
     </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
