--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 <h2> SUMMARY OF QUALIFICATIONS </h2>
     <h4>Core Competencies</h4>
     <ul> 
-        <li>•   Core product management skills:  interdepartmental communication, customer service, rapid prototyping, market analysis, road mapping, and feature specs.</li>
-        <li>•   Computer skills, including: Keynote, Balsamiq, InVision, Adobe Photoshop, Illustrator, and Microsoft Office.</li> 
-        <li>•   Experience in prioritization of tasks to meet scheduled deadlines.</li>
-        <li>•   Able to learn and utilize new procedures and applications quickly and effectively.</li>
-        <li>•   Excellent written and verbal communications skills.</li>
-        <li>•   HTML and CSS </li>
+        <li>Core product management skills:  interdepartmental communication, customer service, rapid prototyping, market analysis, road mapping, and feature specs.</li>
+        <li>Computer skills, including: Keynote, Balsamiq, InVision, Adobe Photoshop, Illustrator, and Microsoft Office.</li> 
+        <li>Experience in prioritization of tasks to meet scheduled deadlines.</li>
+        <li>Able to learn and utilize new procedures and applications quickly and effectively.</li>
+        <li>Excellent written and verbal communications skills.</li>
+        <li>HTML and CSS </li>
     </ul>
 <div class="experience">
 <h2>Relevant Experience </h2>
     <ul>
-        <li>•   Product Management student at General Assembly: planned from conception to ready-to-build a consumer product, including business analysis, customer interviews, wire framing, storyboarding, and a final presentation. Coursework included fundamentals of user research, communicating with stakeholders, creating product features, specs, and MVPs, and creating and making a presentation to stakeholders.</li>
-        <li>•   As Wrap-Up Coordinator, learned complex, detail oriented procedures and industry-specific software in a fast-paced perfection-required office. Requires immediate responsiveness in a dynamic environment to serve customer needs and assisting other departments. Responsible for writing and editing procedures for department manual, as well as self-directed project seeking out and transitioning eligible clients from paper to electronic payroll.</li>
-        <li>•   At Kaon Interactive, was responsible for communication with subcontractors, assuring incoming projects were to spec, incoming inspection of products, and provided oral and written reports of any major roadblocks to the lead technical animator. Learned to use both Adobe Photoshop and the company's proprietary animation software to provide crucial assistance in keeping a critical project on time and on budget. </li>
+        <li>Product Management student at General Assembly: planned from conception to ready-to-build a consumer product, including business analysis, customer interviews, wire framing, storyboarding, and a final presentation. Coursework included fundamentals of user research, communicating with stakeholders, creating product features, specs, and MVPs, and creating and making a presentation to stakeholders.</li>
+        <li>As Wrap-Up Coordinator, learned complex, detail oriented procedures and industry-specific software in a fast-paced perfection-required office. Requires immediate responsiveness in a dynamic environment to serve customer needs and assisting other departments. Responsible for writing and editing procedures for department manual, as well as self-directed project seeking out and transitioning eligible clients from paper to electronic payroll.</li>
+        <li>At Kaon Interactive, was responsible for communication with subcontractors, assuring incoming projects were to spec, incoming inspection of products, and provided oral and written reports of any major roadblocks to the lead technical animator. Learned to use both Adobe Photoshop and the company's proprietary animation software to provide crucial assistance in keeping a critical project on time and on budget. </li>
     </ul> 
 </div>
 
