--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="qualifications">
 
 <h2> SUMMARY OF QUALIFICATIONS </h2>
-    <h4>Core Competencies</h4>
+    <h3>Core Competencies</h3>
     <ul> 
         <li>Core product management skills:  interdepartmental communication, customer service, rapid prototyping, market analysis, road mapping, and feature specs.</li>
         <li>Computer skills, including: Keynote, Balsamiq, InVision, Adobe Photoshop, Illustrator, and Microsoft Office.</li> 
@@ -38,27 +38,28 @@
         <li>At Kaon Interactive, was responsible for communication with subcontractors, assuring incoming projects were to spec, incoming inspection of products, and provided oral and written reports of any major roadblocks to the lead technical animator. Learned to use both Adobe Photoshop and the company's proprietary animation software to provide crucial assistance in keeping a critical project on time and on budget. </li>
     </ul> 
 </div>
-
-PROFESSIONAL EXPERIENCE
+<div class="professional">
+    <h2>PROFESSIONAL EXPERIENCE</h2>
     Payright Payroll, Acton, MA                     2013-Present
 Wrap-Up Coordinator
-Responsible for printing, packaging and shipping of outgoing payrolls, including information-sensitive reports and live checks. Requires extreme attention to detail and following directions with absolute precision. High volume and fast paced, coordinators also assist clients picking up payrolls, answer phones, and troubleshoot problems with incoming payrolls with account representatives. 
+        <p>Responsible for printing, packaging and shipping of outgoing payrolls, including information-sensitive reports and live checks. Requires extreme attention to detail and following directions with absolute precision. High volume and fast paced, coordinators also assist clients picking up payrolls, answer phones, and troubleshoot problems with incoming payrolls with account representatives. </p>
 
 Jo-Ann Fabric and Craft, Westford, MA                   2012-2013
     Team Member
-Assisted customers in finding products, consulted to help customers find the correct product(s). Worked with cash register and other in-store systems. Assisted with annual inventory.
+        <p>Assisted customers in finding products, consulted to help customers find the correct product(s). Worked with cash register and other in-store systems. Assisted with annual inventory.</p>
 
 BBN Technologies, Cambridge, MA                 2008
     English Annotator
-Generated verification and truthed datasets for a state of the art natural language computer application (searching context, not keyword). The interface used Microsoft Excel as a front-end and required highly accurate understanding and diagramming of English sentences and strong attention to detail. Contract was completed ahead of schedule.
+        <p>Generated verification and truthed datasets for a state of the art natural language computer application (searching context, not keyword). The interface used Microsoft Excel as a front-end and required highly accurate understanding and diagramming of English sentences and strong attention to detail. Contract was completed ahead of schedule.</p>
 
     Rochester Institute of Technology Middle College            2008    
     Student coordinator     
-Assisted teachers and professors as guides and supervisors for middle and high school aged students participating in a weekend educational outreach program aimed at encouraging low-income students to seek a college education.
+        <p>Assisted teachers and professors as guides and supervisors for middle and high school aged students participating in a weekend educational outreach program aimed at encouraging low-income students to seek a college education.</p>
 
     Kaon Interactive, Maynard, MA                       2006-2007   
     Technical Animation Intern
-Performed quality assurance, completed basic animation and created marketing presentations for HD quality 3D models of consumer appliances and other products. Utilized Adobe Photoshop to improve image quality of model skins for use in HD, saving the company the cost of an additional photo shoot. Learned to use proprietary company animation software and digital animation to help complete a critical contract.
+        <p>Performed quality assurance, completed basic animation and created marketing presentations for HD quality 3D models of consumer appliances and other products. Utilized Adobe Photoshop to improve image quality of model skins for use in HD, saving the company the cost of an additional photo shoot. Learned to use proprietary company animation software and digital animation to help complete a critical contract.</p>
+</div>
 
 EDUCATION
 General Assembly, Boston, MA                        2014
