--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li>HTML and CSS </li>
     </ul>
 <div class="experience">
-<h2>Relevant Experience </h2>
+<h3>Relevant Experience </h3>
     <ul>
         <li>Product Management student at General Assembly: planned from conception to ready-to-build a consumer product, including business analysis, customer interviews, wire framing, storyboarding, and a final presentation. Coursework included fundamentals of user research, communicating with stakeholders, creating product features, specs, and MVPs, and creating and making a presentation to stakeholders.</li>
         <li>As Wrap-Up Coordinator, learned complex, detail oriented procedures and industry-specific software in a fast-paced perfection-required office. Requires immediate responsiveness in a dynamic environment to serve customer needs and assisting other departments. Responsible for writing and editing procedures for department manual, as well as self-directed project seeking out and transitioning eligible clients from paper to electronic payroll.</li>
@@ -60,16 +60,17 @@ BBN Technologies, Cambridge, MA                 2008
     Technical Animation Intern
         <p>Performed quality assurance, completed basic animation and created marketing presentations for HD quality 3D models of consumer appliances and other products. Utilized Adobe Photoshop to improve image quality of model skins for use in HD, saving the company the cost of an additional photo shoot. Learned to use proprietary company animation software and digital animation to help complete a critical contract.</p>
 </div>
-
-EDUCATION
+<div class="education">
+    <h2>EDUCATION</h2>
 General Assembly, Boston, MA                        2014
-Certificate of Completion, Product Management
+<p>Certificate of Completion, Product Management</p>
 
 Fitchburg State University, Fitchburg, MA               2011 Graduate 
-    Bachelor of Science, Biology
+    <p>Bachelor of Science, Biology</p>
     
     Rochester Institute of Technology, Rochester, NY            2007-2009
-    Completed 51 credits in Biological Sciences
+    <p>Completed 51 credits in Biological Sciences</p>
+</div>
 
 ACTIVITIES
 In-Classroom Volunteer, Nashua River Watershed Association  Late 2011
