--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@ Fitchburg State University, Fitchburg, MA               2011 Graduate
     Rochester Institute of Technology, Rochester, NY            2007-2009
     <p>Completed 51 credits in Biological Sciences</p>
 </div>
-
-ACTIVITIES
+<div class="activities">
+    <h2>ACTIVITIES</h2>
 In-Classroom Volunteer, Nashua River Watershed Association  Late 2011
-Volunteer with the Nashua River Watershed Association doing in-classroom outreach in local grade schools.
+    <p>Volunteer with the Nashua River Watershed Association doing in-classroom outreach in local grade schools.</p>
             
     President, Sciences and Humanities Residential Life Program 2005
     College of Wooster, Wooster, Ohio
-Duties included organization of membership, election oversight of officers, coordination of campus-wide activities and lectures to build bridges between the sciences and humanities.  Successfully grew the organization and established its relevance so that the college granted program residential use of off-campus housing.
+    <p>Duties included organization of membership, election oversight of officers, coordination of campus-wide activities and lectures to build bridges between the sciences and humanities.  Successfully grew the organization and established its relevance so that the college granted program residential use of off-campus housing.</p>
 <footer class="footer">
         <div class="container">
         <p class="text-muted">Eleanor Lowry</p>
