--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@ Fitchburg State University, Fitchburg, MA               2011 Graduate
 </div>
 <div class="activities">
     <h2>ACTIVITIES</h2>
-In-Classroom Volunteer, Nashua River Watershed Association  Late 2011
+In-Classroom Volunteer, Nashua River Watershed Association  
+<p class="date">Late 2011</p>
     <p>Volunteer with the Nashua River Watershed Association doing in-classroom outreach in local grade schools.</p>
             
-    President, Sciences and Humanities Residential Life Program 2005
+    President, Sciences and Humanities Residential Life Program <p class="date">2005</p>
     College of Wooster, Wooster, Ohio
     <p>Duties included organization of membership, election oversight of officers, coordination of campus-wide activities and lectures to build bridges between the sciences and humanities.  Successfully grew the organization and established its relevance so that the college granted program residential use of off-campus housing.</p>
 <footer class="footer">
