--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <h1>Eleanor Lowry</h1>
     
     <div class="address">
-        <p>8 Usher Road #2 
-            Medford, MA 02155
-            lowry.ec@gmail.com                                                 978.689.5551</p>
+        <p>8 Usher Road #2 </p>
+        <p>Medford, MA 02155</p>
+        <p>lowry.ec@gmail.com</p>
+        <p>978.689.5551</p>
     </div>
 
 <div class="qualifications">
@@ -83,6 +84,10 @@ In-Classroom Volunteer, Nashua River Watershed Association
 <footer class="footer">
         <div class="container">
         <p class="text-muted">Eleanor Lowry</p>
+        <p>8 Usher Road #2 </p>
+        <p>Medford, MA 02155</p>
+        <p>lowry.ec@gmail.com</p>
+        <p>978.689.5551</p>
         </div>
     </footer>
 
