--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="address">
         <p>8 Usher Road #2 </p>
         <p>Medford, MA 02155</p>
-        <p>lowry.ec@gmail.com</p>
+        <p align="right">lowry.ec@gmail.com</p>
         <p>978.689.5551</p>
     </div>
 
