add js stylesheet

--- a/photography.html
+++ b/photography.html
@@ -4,6 +4,11 @@
 <head>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
+<style type="text/css">
+    .active{
+        z-index:99;
+    }
+</style>
 </head>
 	<title>Photography</title>
 </head>
