--- a/photography.html
+++ b/photography.html
@@ -1,39 +1,74 @@
 <!DOCTYPE html>
-<html>
 <head>
-<head>
-<link rel="stylesheet" type="text/css" href="stylesheet.css">
-
-<style type="text/css">
-    .active{
-        z-index:99;
-    }
-</style>
-</head>
-	<title>Photography</title>
+  <title>Photography</title>
+   <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <style>
+  .carousel-inner > .item > img,
+  .carousel-inner > .item > a > img {
+      width: 70%;
+      margin: auto;
+  }
+  </style>
 </head>
 <body>
-<div id="slideshow">
-    <img src="http://i.imgur.com/kXfZY5jl.jpg?1" style="position:absolute;" class="active" />
-    <img src="http://i.imgur.com/3UaiJTUl.jpg" style="position:absolute;" />
-    <img src="http://i.imgur.com/gQywqFgl.jpg" style="position:absolute;" />
+<header>
+    <img src="http://i.imgur.com/LkZCkJdb.png?1">
+    <h1>Eleanor Lowry</h1>
+    <div class="menu">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="photography.html">Photography</a></li>
+    </ul>
+  </div>
+  </header>
+<div class="container">
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+   
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+
+   
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="http://i.imgur.com/kXfZY5jl.jpg?1" alt="Chania" width="460" height="345">
+      </div>
+
+      <div class="item">
+        <img src="http://i.imgur.com/3UaiJTUl.jpg" alt="Chania" width="460" height="345">
+      </div>
+    
+      <div class="item">
+        <img src="img_flower.jpg" alt="Flower" width="460" height="345">
+      </div>
+
+      <div class="item">
+        <img src="img_flower2.jpg" alt="Flower" width="460" height="345">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 </div>
-<footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script>
-    function slideSwitch() {
-        var $active = $('div#slideshow IMG.active');
-        var $next = $active.next();    
 
-        $next.addClass('active');
-
-        $active.removeClass('active');
-    }
-
-    $(function() {
-        setInterval( "slideSwitch()", 5000 );
-    });
-</script>
-</footer>
 </body>
 </html>
