--- a/photography.html
+++ b/photography.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Photography</title>
-   <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -14,9 +14,11 @@
       margin: auto;
   }
   </style>
+   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 <header>
+<div class="header">
     <img src="http://i.imgur.com/LkZCkJdb.png?1">
     <h1>Eleanor Lowry</h1>
     <div class="menu">
@@ -37,38 +39,17 @@
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
       <li data-target="#myCarousel" data-slide-to="3"></li>
+      <li data-target="#myCarousel" data-slide-to="4"></li>
+      <li data-targer="#myCarousel" data-slide-to="5"></li>
     </ol>
 
    
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="http://i.imgur.com/kXfZY5jl.jpg?1" alt="Chania" width="460" height="345">
+        <img src="http://i.imgur.com/GoaR2bg.jpg" alt="Flowers" width="460" height="345">
       </div>
 
       <div class="item">
-        <img src="http://i.imgur.com/3UaiJTUl.jpg" alt="Chania" width="460" height="345">
+        <img src="http://i.imgur.com/GdFPQub.jpg" alt="Dogwoods" width="460" height="345">
       </div>
     
-      <div class="item">
-        <img src="img_flower.jpg" alt="Flower" width="460" height="345">
-      </div>
-
-      <div class="item">
-        <img src="img_flower2.jpg" alt="Flower" width="460" height="345">
-      </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
-
-</body>
-</html>
