--- a/photography.html
+++ b/photography.html
@@ -53,3 +53,34 @@
         <img src="http://i.imgur.com/GdFPQub.jpg" alt="Dogwoods" width="460" height="345">
       </div>
     
+      <div class="item">
+        <img src="http://i.imgur.com/YJAp5Yy.jpg" alt="Dogwoods back" width="460" height="345">
+      </div>
+
+      <div class="item">
+        <img src="http://i.imgur.com/hZYuvPo.jpg" alt="Apple Blossom" width="460" height="345">
+      </div>
+
+      <div class="item">
+        <img src="http://i.imgur.com/W5HKwNP.jpg" alt="Red Berries with Leaves" width="460" height="345">
+      </div>
+
+      <div class="item">
+        <img src="http://i.imgur.com/8IRaOVG.jpg" alt="Red Berries in Snow" width="460" height="345">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+</body>
+</html>
