--- a/photography.html
+++ b/photography.html
@@ -58,7 +58,7 @@
       </div>
 
       <div class="item">
-        <img src="http://i.imgur.com/hZYuvPo.jpg" alt="Apple Blossom" width="460" height="345">
+        <img src="http://i.imgur.com/dVS4wvu.jpg" alt="Winter Pond" width="460" height="345">
       </div>
 
       <div class="item">
