--- a/photography.html
+++ b/photography.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <header>
-<div class="header">
+<div class="eleanorheader">
     <img src="http://i.imgur.com/LkZCkJdb.png?1">
     <h1>Eleanor Lowry</h1>
     <div class="menu">
