--- a/photography.html
+++ b/photography.html
@@ -17,8 +17,7 @@
    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-<header>
-<div class="eleanorheader">
+<header class="eleanorheader">
     <img src="http://i.imgur.com/LkZCkJdb.png?1">
     <h1>Eleanor Lowry</h1>
     <div class="menu">
@@ -28,7 +27,6 @@
       <li><a href="#">Blog</a></li>
       <li><a href="photography.html">Photography</a></li>
     </ul>
-  </div>
   </header>
 <div class="container">
   <br>
